--- a/proyecto_06/src/main/resources/templates/vuelos/listado.html
+++ b/proyecto_06/src/main/resources/templates/vuelos/listado.html
@@ -12,8 +12,8 @@
         <header th:replace="~{layout/plantilla :: header}"/>
         
         <section th:replace="~{vuelos/fragmentos :: botonesAgregar}"/>
-        <section th:replace="~{vuelos/fragmentos :: agregarCategoria}"/>
-        <section th:replace="~{vuelos/fragmentos :: listadoCategorias}"/>
+        <section th:replace="~{vuelos/fragmentos :: agregarVuelos}"/>
+        <section th:replace="~{vuelos/fragmentos :: listadoVuelos}"/>
         
         <footer th:replace="~{layout/plantilla :: footer}"/> 
        
