--- a/proyecto_06/src/main/resources/templates/layout/plantilla.html
+++ b/proyecto_06/src/main/resources/templates/layout/plantilla.html
@@ -24,13 +24,13 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <ul class="navbar-nav">
                             <li class="nav-item px-2"><a class="nav-link" th:href="@{/reserva/listado}">[[#{plantilla.reservas}]]</a></li>
-                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/producto/listado}">[[#{plantilla.productos}]]</a></li>                           
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/vuelos/listado}">[[#{plantilla.vuelos}]]</a></li>                           
                              <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" 
                                    data-bs-toggle="dropdown" 
                                    href="#" 
                                    role="button" 
-                                   aria-expanded="false">[[#{plantilla.pruebas}]]</a>
+                                   aria-expanded="false">[[#{plantilla.pasajeros}]]</a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a class="dropdown-item"  th:href="@{/pruebas/listado}">[[#{plantilla.asociaciones}]]</a></li>
                                     <li><a class="dropdown-item"  th:href="@{/pruebas/listado2}">[[#{plantilla.consultas}]]</a></li>
