--- a/proyecto_06/src/main/resources/templates/vuelos/fragmentos.html
+++ b/proyecto_06/src/main/resources/templates/vuelos/fragmentos.html
@@ -4,12 +4,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http//www.thymeleaf.org">
     <head th:replace="~{layout/plantilla :: head}"
-        <title>Proyecto06</title>
+          <title>Proyecto06</title>
         <meta charset="UTF-8"/> 
-      
+
     </head>
     <body>
-        
+
         <!-- 1 Sección para crear el boton de agregar... llamará a una ventana modal-->
         <section th:fragment="botonesAgregar" class="py-4 mb-4 bg-light">
             <div class="container">
@@ -51,26 +51,27 @@
                                     <label for="descripcion">[[#{vuelos.codigoVuelo}]]</label>
                                     <input type="text" class="form-control" name="id_vuelo" required="true"/>
                                 </div>
-                                 <div class="mb-3">
+                                <div class="mb-3">
                                     <label for="descripcion">[[#{vuelos.origen}]]</label>
                                     <input type="text" class="form-control" name="id_vuelo" required="true"/>
                                 </div>
-                                 <div class="mb-3">
+                                <div class="mb-3">
                                     <label for="descripcion">[[#{vuelos.destino}]]</label>
                                     <input type="text" class="form-control" name="id_vuelo" required="true"/>
                                 </div>
-                                 <div class="mb-3">
+                                <div class="mb-3">
                                     <label for="descripcion">[[#{vuelos.fechaSalida}]]</label>
                                     <input type="text" class="form-control" name="id_vuelo" required="true"/>
                                 </div>
-                                 <div class="mb-3">
+                                <div class="mb-3">
                                     <label for="descripcion">[[#{vuelos.fechaLlegada}]]</label>
                                     <input type="text" class="form-control" name="id_vuelo" required="true"/>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="activo">[[#{vuelos.activo}]]</label>
-                                    <input class="form-check-input" type="checkbox" name="activo" id="activo"/>
+                                    <label for="descripcion">[[#{vuelos.precio}]]</label>
+                                    <input type="text" class="form-control" name="id_vuelo" required="true"/>
                                 </div>
+                               
                             </div>
                             <div class="modal-footer">
                                 <button class="btn btn-primary" type="submit">Guardar</button>
@@ -100,7 +101,9 @@
                                             <th>[[#{vuelos.destino}]]</th>
                                             <th>[[#{vuelos.fechaSalida}]]</th>
                                             <th>[[#{vuelos.fechaLlegada}]]</th>
-                                            <th>[[#{vuelos.activo}]]</th>
+                                            <th>[[#{vuelos.precio}]]</th>
+                                      
+                                            
                                             <th></th></tr>
                                     </thead>
                                     <tbody>
@@ -155,13 +158,13 @@
                                                 <h4>[[#{accion.actualizar}]]</h4>
                                             </div>
                                             <div class="card-body">
-                                                 <div class="mb-3">
+                                                <div class="mb-3">
                                                     <label for="descripcion">[[#{vuelos.idVuelo}]]</label>
                                                     <input type="text" class="form-control" 
                                                            name="descripcion" th:field="*{descripcion}"
                                                            required="true">
                                                 </div>
-                                                 <div class="mb-3">
+                                                <div class="mb-3">
                                                     <label for="descripcion">[[#{vuelos.codigoVuelo}]]</label>
                                                     <input type="text" class="form-control" 
                                                            name="descripcion" th:field="*{descripcion}"
@@ -232,6 +235,6 @@
                 </div>
             </div>
         </section>
-       
+
     </body>
 </html>
